[package]
name = "pinyin-card-rust"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8.6"
tokio = { version = "1.48", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
sqlx = { version = "0.8", features = ["runtime-tokio", "mysql", "chrono"] }
dotenvy = "0.15"
tower-http = { version = "0.6", features = ["cors"] }
